Made current page have its part of the nav bar highlighted by background, changed posisitioning on text and images

--- a/style.css
+++ b/style.css
@@ -35,3 +35,30 @@ nav {
     border: white;
     border-style: solid;
 }
+
+a {
+    text-decoration: none;
+    color: whitesmoke;
+}
+
+.currentPage {
+    background-color: red;
+    border: red;
+    border-style: solid;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.home {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+ul {
+    list-style-type: square;
+}
+
+p {
+    text-align: center;
+}
