--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ img.home {
 }
 
 img.cars {
-    height: 250px;
+    height: 300px;
     width: 350px;
 }
 
@@ -32,7 +32,7 @@ nav {
     display: flex;
     justify-content: space-around;
     padding: 5px;
-    border: white;
+    border: whitesmoke;
     border-style: solid;
 }
 
@@ -45,8 +45,8 @@ a {
     background-color: red;
     border: red;
     border-style: solid;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .home {
