--- a/style.css
+++ b/style.css
@@ -87,3 +87,10 @@ footer {
     height: 30px;
     width: 30px;
 }
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
